--- a/web/html/css/style.css
+++ b/web/html/css/style.css
@@ -496,3 +496,40 @@ section .action {
 section h2 {
     font-size: 17px;
 }
+
+.logined img {
+    width: 34px;
+    height: 34px;
+}
+
+.logined {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    font-size: 17px;
+}
+
+main.panels {
+    flex-direction: row;
+    max-width: 100%;
+    position: fixed;
+    top: 60px;
+    height: calc(100% - 70px);
+    padding: 0;
+    gap: 0;
+    display: flex;
+    background-color: #eee;
+    border: none;
+}
+
+main {
+    display: none;
+}
+
+main.active {
+    display: inherit;
+}
+
+td.result {
+    display: flex;
+}
