--- a/web/html/templates/contest/contest.html
+++ b/web/html/templates/contest/contest.html
@@ -8,21 +8,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.36.0/ace.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="../../css/reset.css">
-    <link rel="stylesheet" href="../../css/common.css">
+    <link rel="stylesheet" href="../../cs/common.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <style>
-        main {
-            display: none;
-        }
 
-        main.active {
-            display: inherit;
-        }
-
-        td.result {
-            display: flex;
-        }
-    </style>
 </head>
 
 <body>
@@ -173,15 +161,6 @@
                 this.element = element
                 this.element.classList.add("active")
                 document.querySelector(`main.${this.element.value}`).classList.add("active")
-            }
-            top() {
-
-            }
-            ranking() {
-
-            }
-            submittion() {
-
             }
         }
         document.querySelector(".result").innerHTML = badge("ac")
