--- a/web/html/css/style.css
+++ b/web/html/css/style.css
@@ -419,7 +419,7 @@ nav button {
 }
 
 nav button.active {
-    background-color: #dddddd;
+    background-color: #e4e4e4;
 }
 
 table.border td {
@@ -520,14 +520,6 @@ main.panels {
     display: flex;
     background-color: #eee;
     border: none;
-}
-
-main {
-    display: none;
-}
-
-main.active {
-    display: inherit;
 }
 
 td.result {
