--- a/web/html/templates/contest/contest.html
+++ b/web/html/templates/contest/contest.html
@@ -10,7 +10,15 @@
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../cs/common.css">
     <link rel="stylesheet" href="../../css/style.css">
+    <style>
+        main {
+            display: none;
+        }
 
+        main.active {
+            display: inherit;
+        }
+    </style>
 </head>
 
 <body>
@@ -132,7 +140,7 @@
             set_title(json.name, json.date)
             set_problems(json.problems)
         }
-        
+
         function set_title(name, date) {
             const formattedDate = format_date(date);
             document.querySelector(".title h1").innerText = name
