ファイル構造を変更

--- a/web/html/templates/contest/contest.html
+++ b/web/html/templates/contest/contest.html
@@ -111,7 +111,7 @@
             </table>
         </section>
     </main>
-    <script src="../../js/submit.js"></script>
+    <script src="../../js/common.js"></script>
     <script>
         function format_date(date) {
             return new Date(date).toLocaleString('ja-JP', {
