--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -234,7 +234,7 @@
             </div>
         </div>
     </main>
-    <script src="../../js/submit.js"></script>
+    <script src="../../js/common.js"></script>
     <script src="../../js/common.js"></script>
     <script>
         let test_case = {
