--- a/web/html/css/style.css
+++ b/web/html/css/style.css
@@ -53,7 +53,7 @@ header {
     padding: 20px 20px;
     background-color: #ffffffc0;
     backdrop-filter: blur(10px);
-    color: #111;
+    color: #222;
     justify-content: space-between;
     position: sticky;
     top: 0;
@@ -61,9 +61,10 @@ header {
 
 header div {
     display: flex;
-    gap: 32px;
+    gap: 26px;
     align-items: center;
 }
+
 
 header h1 {
     font-size: 20px;
@@ -497,6 +498,12 @@ section h2 {
     font-size: 17px;
 }
 
+header .border {
+    height: 30px;
+    width: 1px;
+    background: #ccc;
+}
+
 .logined img {
     width: 34px;
     height: 34px;
@@ -524,4 +531,33 @@ main.panels {
 
 td.result {
     display: flex;
+}
+
+
+.logined_menu {
+    width: 200px;
+    position: absolute;
+    top: 64px;
+    background-color: #fff;
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    gap: 3px;
+    right: 4px;
+    padding: 4px;
+    border-radius: 6px;
+    border: 1px solid #eee;
+}
+
+.logined_menu a {
+    height: 42px;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    padding: 10px;
+    border-radius: 2px;
+}
+
+.logined_menu a:hover {
+    background-color: #f3f3f3;
 }
