--- a/web/html/templates/contest/contest.html
+++ b/web/html/templates/contest/contest.html
@@ -22,6 +22,29 @@
 </head>
 
 <body>
+    <header>
+        <a href="../../index.html">
+            <img src="../../img/logo.svg" alt="MaiCoder">
+        </a>
+        <div>
+            <a href="../../editor.html">作問エディタ</a>
+            <a href="../../contests.html">コンテスト</a>
+            <a href="../../problems.html">問題集</a>
+            <div class="border"></div>
+            <div class="div">
+                <a href="./../signup.html">新規登録</a>
+                <a href="./../login.html" class="primary">ログイン</a>
+            </div>
+            <button class="logined" style="display: none; padding: 4px; border: none;" onclick="menu_toggle()">
+                <img src="../../img/user.svg" alt="">
+                <p></p>
+            </button>
+            <div class="logined_menu">
+                <a href="">プロフィール</a>
+                <a href="">ログアウト</a>
+            </div>
+        </div>
+    </header>
     <template class="problem">
         <tr>
             <th class="alphabet"></th>
@@ -112,6 +135,7 @@
         </section>
     </main>
     <script src="../../js/common.js"></script>
+    <script src="../../js/user.js"></script>
     <script>
         function format_date(date) {
             return new Date(date).toLocaleString('ja-JP', {
