--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -24,6 +24,10 @@
             align-items: center;
         }
 
+        header .right {
+            gap: 12px;
+        }
+
         #content {
             overflow-y: auto;
             padding: 20px;
@@ -147,6 +151,22 @@
             height: 30px;
             background-color: none;
         }
+
+        header button {
+            height: 40px;
+        }
+
+        dialog {
+            border: none;
+            outline: none;
+            width: 600px;
+            padding: 0;
+        }
+
+        table {
+            text-align: left;
+            font-weight: 400;
+        }
     </style>
 </head>
 
@@ -154,12 +174,45 @@
     <template>
         <button class="copy" onclick="copy(this)">copy</button>
     </template>
+    <dialog>
+        <div class="top">
+            <h2>提出結果</h2>
+            <select name="" id="">
+                <option value="">すべての提出</option>
+                <option value="">自分の提出</option>
+            </select>
+        </div>
+        <table class="border">
+            <tr>
+                <td>ユーザー</td>
+                <td>言語</td>
+                <td>結果</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>pcsuke</td>
+                <td>Python3</td>
+                <td>AC</td>
+                <td>
+                    <a href="">詳細</a>
+                </td>
+            </tr>
+        </table>
+    </dialog>
     <header>
         <div class="left">
             <h1></h1>
-            <p>実行時間: 3000ms, メモリ制限: 1024MB</p>
+            <p>実行時間: 3.0s, メモリ: 1GB</p>
         </div>
         <div class="right">
+            <button type="button" class="">
+                <p>
+                    <span class="material-symbols-outlined">
+                        list
+                    </span>  
+                    結果
+                </p>
+            </button>
             <button type="button" class="primary submit" onclick="problem_submit()">
                 <p>
                     <span class="material-symbols-outlined">
@@ -237,6 +290,7 @@
     <script src="../../js/common.js"></script>
     <script src="../../js/common.js"></script>
     <script>
+        document.querySelector("dialog").showModal()
         let test_case = {
             input: [],
             output: []
@@ -254,12 +308,14 @@
 
         function set_title(name) {
             document.querySelector("header h1").innerText = name
+            document.title = name
         }
 
         async function set_problem() {
             const json = await get_problem(location.pathname.split('/')[2])
-            await preview(json.content.split('\\n').join('\n'))
-            await set_title(json.name)
+            preview(json.content.split('\\n').join('\n'))
+            set_title(json.name)
+            
         }
 
         function preview(data) {
