--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -159,11 +159,46 @@
         dialog {
             border: none;
             outline: none;
-            width: 600px;
+            width: 700px;
             padding: 0;
+            max-height: 700px !important;
+            height: calc(100% - 120px);
+            background-color: #fff;
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+            outline: none;
+            border: none;
+        }
+
+        dialog::backdrop {
+            background-color: rgba(0, 0, 0, 0.1);
+            animation: fadeIn 0.1s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+            background-color: rgba(0, 0, 0, 0);
+            }
+            to {
+            background-color: rgba(0, 0, 0, 0.1);
+            }
+        }
+        
+        dialog .top {
+            position: absolute;
+            width: 100%;
+        }
+
+        dialog .wrapper {
+            border: none;
+            background-color: #fff;
+            overflow-y: scroll;
+            height: 100%;
         }
 
         table {
+            margin-top: 50px;
             text-align: left;
             font-weight: 400;
         }
@@ -171,8 +206,19 @@
 </head>
 
 <body>
-    <template>
+    <template class="copy">
         <button class="copy" onclick="copy(this)">copy</button>
+    </template>
+    <template class="row">
+        <tr>
+            <td class="user">pcsuke</td>
+            <td class="compiler">Python3</td>
+            <td class="status">AC</td>
+            <td class="time">AC</td>
+            <td>
+                <a href="">詳細</a>
+            </td>
+        </tr>
     </template>
     <dialog>
         <div class="top">
@@ -182,22 +228,17 @@
                 <option value="">自分の提出</option>
             </select>
         </div>
-        <table class="border">
-            <tr>
-                <td>ユーザー</td>
-                <td>言語</td>
-                <td>結果</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>pcsuke</td>
-                <td>Python3</td>
-                <td>AC</td>
-                <td>
-                    <a href="">詳細</a>
-                </td>
-            </tr>
-        </table>
+        <div class="wrapper">
+            <table class="border">
+                <tr>
+                    <td>ユーザー</td>
+                    <td>言語</td>
+                    <td>結果</td>
+                    <td>日時</td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
     </dialog>
     <header>
         <div class="left">
@@ -205,11 +246,11 @@
             <p>実行時間: 3.0s, メモリ: 1GB</p>
         </div>
         <div class="right">
-            <button type="button" class="">
+            <button type="button" class="" onclick='document.querySelector("dialog").showModal()'>
                 <p>
                     <span class="material-symbols-outlined">
                         list
-                    </span>  
+                    </span>
                     結果
                 </p>
             </button>
@@ -289,16 +330,27 @@
     </main>
     <script src="../../js/common.js"></script>
     <script>
-        document.querySelector("dialog").showModal()
-
+        document.querySelector("dialog").addEventListener("click", (event) => {
+            if (event.target === document.querySelector("dialog")) {
+                document.querySelector("dialog").close();
+            }
+        });
         async function set_submition() {
             const response = await fetch(`https://api.maicoder.f5.si/submissions/${location.pathname.split('/')[2]}`)
             const json = await response.json()
-            json.forEach(element =>{
-
+            json.forEach(element => {
+                console.log(element)
+                const template = document.querySelector("template.row");
+                const clone = template.content.cloneNode(true);
+                clone.querySelector("td.user").innerText = element.user;
+                clone.querySelector("td.compiler").innerText = element.compiler;
+                clone.querySelector("td.status").innerText = element.status;
+                clone.querySelector("td.time").innerText = new Date(element.time).toLocaleString('ja-JP', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit', second: '2-digit' }).replace(/\//g, '-');
+                clone.querySelector("a").href = `/submissions/${element.id}`;
+                document.querySelector("dialog table").appendChild(clone);
             })
         }
-        set_submition() 
+        set_submition()
 
         let test_case = {
             input: [],
@@ -324,7 +376,7 @@
             const json = await get_problem(location.pathname.split('/')[2])
             preview(json.content.split('\\n').join('\n'))
             set_title(json.name)
-            
+
         }
 
         function preview(data) {
@@ -373,7 +425,7 @@
 
         function code_addcopy() {
             document.querySelectorAll("pre code").forEach(element => {
-                element.closest("pre").before(document.querySelector("template").content.cloneNode(true))
+                element.closest("pre").before(document.querySelector("template.copy").content.cloneNode(true))
             })
         }
 
